--- a/html/css/unicorn.main.css
+++ b/html/css/unicorn.main.css
@@ -1,4 +1,4 @@
-/**
+>/**
  * Unicorn Admin Template
  * Diablo9983 -> diablo9983@gmail.com
 **/
@@ -1258,21 +1258,6 @@ div.dataTables_wrapper .ui-widget-header {
     display: block;
     height: 8px;
 }
-.modal {
-	z-index: 99999 !important;
-}
-.modal-backdrop {
-	z-index: 999 !important;
-}
-.modal-header {
-	height: auto;
-	padding: 8px 15px 5px;
-}
-.modal-header h3 {
-	font-size: 12px;
-	text-shadow: 0 1px 0 #ffffff;
-}
-
 .notify-ui ul {
 	list-style: none;
 	margin: 0;
@@ -1464,55 +1449,5 @@ form {
 	}
 	#content {
 		margin-left: 43px;
-	}
-}
-@media (max-width: 600px) {
-	.widget-title .buttons {
-		float: left;
-	}
-	.panel-left {
-		margin-right: 0;
-	}
-	.panel-right {
-		border-top: 1px solid #DDDDDD;
-		border-left: none;
-		position: relative;
-		top: auto;
-		right: auto;
-		height: auto;
-		width: auto;
-	}
-
-}
-@media (max-width: 767px) {
-	body {
-		padding: 0 !important;
-	}
-	.container-fluid {
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-	#search { display: none; }
-	#user-nav > ul > li > a > span.text {
-		display: none;
-	}
-}
-@media (min-width: 768px) and (max-width: 979px) {
-	[class*="span"], .row-fluid [class*="span"] {
-		display: block;
-		float: none;
-		margin-left: 0;
-		width: auto;
-	}
-}
-@media (max-width: 979px) {
-	div.dataTables_wrapper .ui-widget-header {
-		height: 68px;
-	}
-	.dataTables_filter {
-		position: relative;
-	}
-	.dataTables_filter, .dataTables_paginate {
-		text-align: center;
 	}
 }
