--- a/freewifiClient/res/layout/fragment_bdmap.xml
+++ b/freewifiClient/res/layout/fragment_bdmap.xml
@@ -21,24 +21,48 @@
         	    android:layout_height="40dp"
         	    android:layout_weight="1"
         	    android:background="#deeacb"
-        	    android:layout_gravity="center_vertical"
+        	    android:layout_gravity="center"
         	    android:layout_marginLeft="3dp" >
         	    <ImageView 
         	        android:layout_width="20dp"
         	        android:layout_height="20dp"
         	        android:layout_marginLeft="3dp"
-        	        android:layout_gravity="center_vertical"
+        	        android:layout_gravity="center"
         	        android:src="@drawable/refreshlocation"
         	        android:contentDescription="refresh" />
 	        	<Button android:id="@+id/btn_locate"
 				    android:layout_width="wrap_content"
 		        	android:layout_height="wrap_content"
 		        	android:layout_marginLeft="2dp"
-		        	android:layout_gravity="center_vertical"
+		        	android:layout_gravity="center"
 		        	android:background="#0000"
 		        	android:textColor="#a7ce63"
 		        	android:text="刷新" />
         	</LinearLayout>
+
+        	<LinearLayout
+        	    android:layout_width="wrap_content"
+        	    android:layout_height="40dp"
+        	    android:layout_weight="1"
+        	    android:background="#deeacb"
+        	    android:layout_gravity="center"
+        	    android:layout_marginLeft="3dp" >
+        	    <ImageView
+        	        android:layout_width="20dp"
+        	        android:layout_height="20dp"
+        	        android:layout_marginLeft="3dp"
+        	        android:layout_gravity="center"
+        	        android:src="@drawable/refreshlocation"
+        	        android:contentDescription="refresh" />
+	        	<Button android:id="@+id/btn_navi"
+				    android:layout_width="wrap_content"
+		        	android:layout_height="wrap_content"
+		        	android:layout_marginLeft="2dp"
+		        	android:layout_gravity="center"
+		        	android:background="#0000"
+		        	android:textColor="#a7ce63"
+		        	android:text="导航" />
+        	</LinearLayout>
     </LinearLayout>
-    
+
 </RelativeLayout>
